--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "LUFFIS and maybe TIKRU",
   "license": "MIT",
   "scripts": {
-    "build": "babel src/index.js --out-file ./index.js && cp src/index.html index.html",
+    "build": "babel src/index.js --out-file ./index.js && cp src/index.html index.html && babel src/env.js --out-file ./env.js",
     "start-dev": "babel-node src/index.js",
     "start": "node index.js"
   },
