--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "kyykkishotline",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "LUFFIS and maybe TIKRU",
   "license": "MIT",
   "scripts": {
-    "build": "babel src/index.js --out-file ./index.js && cp src/index.html index.html && babel src/env.js --out-file ./env.js",
+    "prebuild": "rm -fr dist && mkdir dist",
+    "build": "babel src/index.js --out-file ./dist/index.js && cp src/index.html dist/index.html",
     "start-dev": "babel-node src/index.js",
-    "start": "node index.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
