--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prebuild": "rm -fr dist && mkdir dist",
     "build": "babel src/index.js --out-file ./dist/index.js && cp src/index.html dist/index.html",
     "start-dev": "babel-node src/index.js",
+    "prestart": "pwd && ls",
     "start": "node dist/index.js"
   },
   "dependencies": {
