--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "scripts": {
     "prebuild": "rm -fr dist && mkdir dist",
     "build": "babel src/index.js --out-file ./dist/index.js && cp src/index.html dist/index.html",
-    "start-dev": "babel-node src/index.js",
-    "prestart": "pwd && ls",
-    "start": "node dist/index.js"
+    "start-dev": "babel-node ./src/index.js",
+    "start": "node ./dist/index.js"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
