--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prebuild": "rm -fr dist && mkdir dist",
     "build": "babel src/index.js --out-file ./dist/index.js && cp src/index.html dist/index.html",
-    "start-dev": "babel-node src/index.js",
+    "start-dev": "NODE_ENV=development babel-node src/index.js",
     "start": "node dist/index.js"
   },
   "dependencies": {
