--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "rm -fr dist && mkdir dist",
     "build": "babel src/index.js --out-file ./dist/index.js && cp src/index.html dist/index.html",
     "start-dev": "NODE_ENV=development babel-node src/index.js",
-    "prestart": "npm build",
+    "prestart": "npm run build",
     "start": "node dist/index.js"
   },
   "dependencies": {
