--- a/package.json
+++ b/package.json
@@ -6,18 +6,38 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rm -fr dist && mkdir dist",
-    "build": "babel src/index.js --out-file ./dist/index.js && cp src/index.html dist/index.html",
-    "start-dev": "NODE_ENV=development babel-node src/index.js",
+    "build": "npm run build-server && npm run build-web",
+    "build-server": "babel src/index.js --out-file ./dist/index.js",
+    "build-web": "webpack --optimize-minimize && cp src/web/index.html dist/web/index.html",
+    "start-dev": "NODE_ENV=development nodemon index.js --exec babel-node",
     "prestart": "npm run build",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "lint": "eslint src",
+    "lint-fix": "eslint --fix src"
   },
   "dependencies": {
+    "autoprefixer": "^6.6.1",
     "babel-cli": "^6.18.0",
+    "babel-loader": "^6.2.10",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.13.0",
+    "eslint-loader": "^1.6.1",
     "express": "^4.14.0",
+    "file-loader": "^0.9.0",
+    "image-webpack-loader": "^3.1.0",
     "node-env-file": "^0.1.8",
-    "slack": "^8.1.2"
+    "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.0",
+    "postcss-loader": "^1.2.0",
+    "postcss-normalize": "^0.3.0",
+    "slack": "^8.1.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-hot-middleware": "^2.15.0",
+    "whatwg-fetch": "^2.0.1"
   }
 }
