--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "^0.9.0",
     "image-webpack-loader": "^3.1.0",
     "node-env-file": "^0.1.8",
+    "node-fetch": "^1.6.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.0",
     "postcss-loader": "^1.2.0",
